# suitable-class-finder

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.circleci/: config.yml
suitable_class_finder/: __init__.py  suitable_class_finder.py
tests/: test_suitable_class_finder.py
tests/utils/: suitable_class_finder.py
