[tool.poetry]
name = "suitable-class-finder"
version = "0.1.4"
description = "Given the hierarchy of an abstract class, it detects the appropriate concrete subclass (deterministically) that satisfies certain attributes obtained as a parameter. Useful for implementing the Strategy design pattern."
authors = ["Armando Ezequiel Puerta <armando.ezequiel.puerta@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "suitable_class_finder"}]
include = [
    { path = "suitable_class_finder/py.typed", format = "wheel" }
]
exclude = ["tests"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development"]
homepage = "https://github.com/EzequielPuerta/suitable-class-finder"
repository = "https://github.com/EzequielPuerta/suitable-class-finder"
documentation = "https://github.com/EzequielPuerta/suitable-class-finder"


[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
codecov = "^2.1.13"
pytest-cov = "^4.1.0"
pre-commit = "^3.6.0"
mypy = "^1.8.0"
ruff = "^0.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/EzequielPuerta/suitable-class-finder/issues"

#############################################
#                 RUFF
#############################################
[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = []

# Esto activa reglas equivalentes a flake8, isort, pyupgrade,
# bugs típicos y mejores prácticas.
lint.select = [
    "E",   # errores estilo
    "F",   # errores de flake8
    "I",   # orden de imports (isort)
    "B",   # bugbear
    "UP",  # pyupgrade
    "C4",  # comprehensions
    "W",   # warnings
]

lint.ignore = [
    "E203",  # compatibilidad con estilo Black
    "E501",
]

#############################################
#                 RUFF ISORT
#############################################
[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["core"]
force-single-line = false

#############################################
#                 RUFF FORMAT
#############################################
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

#############################################
#                 MYPY
#############################################
[tool.mypy]
strict = false
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
